Fixed chart size on larger zoom, modal clipping with nav bar and score summary fonts
The text in the results summary should all fit now, the modal doesn't clip the nav bar and the chart should stand within the white box around it when you zoom in more on the page.

--- a/application/static/css/d3_visualization.css
+++ b/application/static/css/d3_visualization.css
@@ -33,8 +33,8 @@ center {
 
 /* Main tsne chart */
 #dataviz_axisZoom {
-    height: 500px;
-    width: 700px;
+    height: 95%;
+    width: 95%;
     z-index: 1;
 }
 
@@ -43,7 +43,8 @@ center {
     background-color: white;
     border-radius: 12px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    height: 550px;
+    height: 80%;
+    width: 80%;
 }
 
 #pred_but {
@@ -190,6 +191,7 @@ center {
     font-family: 'Open Sans', sans-serif;
     vertical-align: baseline;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
 }
 
 #above_graph_content{
@@ -515,8 +517,9 @@ li a:hover {
     position: absolute;
     left: 10vw;
     top: 15vw;
-    width: 55vw;
+    width: 47vw;
     height: 35vw;
+    z-index: 1;
     /*border: 2px solid #484848;
     border-radius: 5px;
     padding-left: 0.5vw;
@@ -527,6 +530,7 @@ li a:hover {
 }
 .modal-content{
     border: 2px solid #484848;
+    
 }
 
 
